methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
def faireV()
^PictureMono2:1: error: expected class or object definition
def faireV()
^PictureMono2:2: error: expected class or object definition
{
^PictureMono2:22: error: expected class or object definition
def dessinerMotif()
^PictureMono2:23: error: expected class or object definition
{
^